--- a/app/views/layouts/_header.erb
+++ b/app/views/layouts/_header.erb
@@ -4,7 +4,7 @@
       <% if current_user.stores.count == 0%>
         <%= link_to "Create your stores now!", new_admin_store_path %>
       <% else %>
-        <%= link_to "Go to your store now!", "#", :id => "stores_list_toggler"%>
+        <%= link_to "g", "#", :id => "stores_list_toggler"%>
       <% end %>
     </div>
   <% end %>
