--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,12 +4,7 @@
 .float_l { float: left }
 .float_r { float: right }
 .center { text-align: center;}
-.w10 {
-  width: 5%;
-}
-.block{
-  display: block;
-}
+.block {display: block;}
 
 *{
   box-sizing: border-box;
@@ -77,25 +72,24 @@ label{
   top: 0;
   left: 0;
   width: 100%;
-  height: 55px;
-  background: -webkit-linear-gradient(bottom, #666 0%, #525252 100%);
-  background: -moz-linear-gradient(bottom, #666 0%, #525252 100%);
+  height: 40px;
+  background-color: rgba(146, 147, 153, 0.64);
   text-shadow: 1px 1px 1px rgba(0, 0, 0, .1);
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, .1);
   text-transform: uppercase;
   font-size: 12px;
   a{
     cursor: pointer;
-    color: #aaa;
+    color: white;
     display: block;
     float: left;
-    padding: 20px 10px;
-    border-right: dotted 1px rgba(255, 255, 255, .1);
-    border-left: dotted 1px rgba(0, 0, 0, .3);
+    padding: 5px;
+    height: 30px;      a
     -webkit-transition: background-color 0.5s ease;
-    &:hover{
-      color: white;
-      background-color: #444;
-    }
+
+      background: url("list.png") no-repeat center;
+      color: red !important;
+
   }
 }
 
