--- a/app/views/layouts/_footer.erb
+++ b/app/views/layouts/_footer.erb
@@ -27,7 +27,8 @@
     remaining essentially unchanged.
     <%= link_to "Read More", "#" %>
   </div>
-  <div class="cleaner" id="cr">
+  <hr class="cleaner">
+  <div id="cr">
     Copyright &copy; 2048 <a href="#">Your Company Name</a>
     <span class="float_r"><%=languages_select_tag%></span>
   </div>
