--- a/app/assets/stylesheets/admin/assets.scss
+++ b/app/assets/stylesheets/admin/assets.scss
@@ -51,6 +51,86 @@
     .arrow_undo_icon_active{
       background-image: url("/assets/icons/arrow_undo.png") !important;
     }
+    #new_assets_window{
+      font-size: 0.8em;
+      position: absolute;
+      top: 0;
+      left: -1px;
+      width: 20%;
+      overflow-x: hidden;
+      overflow-y: auto;
+      #new_asset_title{
+        -webkit-transition: background-color 0.5s ease;
+        -webkit-transition: box-shadow 0.5s ease;
+        width: 100%;
+        padding: 6px;
+        cursor: pointer;
+        color: #499249;
+        font-weight: bold;
+        height: 27px;
+        &.on{
+          box-shadow: 0 0 5px rgba(36, 103, 25, 0.78) inset;
+        }
+      }
+      #new_assets_tabs{
+        display: none;
+        background-color: silver;
+        border: 2px solid silver;
+        .new_assets_tab{
+          width: 44%;
+          height: 20px;
+          background-color: white;
+          border: 2px solid silver;
+          border-top: none;
+          border-radius: 0 0 5px 5px;
+          color: silver;
+          display: inline-block;
+          text-align: center;
+          float: left;
+          padding-top: 2px;
+          margin: 0 3% 0;
+          cursor: pointer;
+          &:hover{
+            color: #499249;
+            border-color: #499249;
+          }
+          &.active_tab{
+            color: #499249;
+            border-color: #499249;
+            font-weight: bold;
+          }
+        }
+        #upload_assets_window, #create_assets_window{
+          margin-top: 2px;
+          background-color: white;
+          padding: 3px;
+        }
+        #upload_assets_window{
+          form#new_asset input[type=submit]{
+            height: 25px;
+            display: inline;
+            margin: 1px;
+            box-shadow: none;
+          }
+          #uploaded_assets_list{
+            text-align: left;
+            padding: 2px;
+            .accepted{
+              color: #499249;
+            }
+            .delayed{
+              color: gray;
+              text-decoration: line-through;
+            }
+          }
+        }
+        #create_assets_window{
+          input[type=text]{
+            width: 60%;
+          }
+        }
+      }
+    }
   }
 
   #assets_menu{
@@ -153,74 +233,6 @@
         color: #555;
       }
     }
-    #new_assets_window{
-      font-size: 0.8em;
-      margin-top: 10px;
-      #new_assets_tabs{
-        display: none;
-        .new_assets_tab{
-          width: 44%;
-          height: 20px;
-          background-color: silver;
-          border-top: 1px solid #777;
-          color: white;
-          display: inline-block;
-          text-align: center;
-          float: left;
-          padding-top: 2px;
-          margin: 0 3% 0;
-          cursor: pointer;
-          &:hover{
-            color: #499249;
-          }
-          &.active_tab{
-            color: #499249;
-            border-top-color: #499249;
-            border-top-width: 3px;
-            margin-top: -2px;
-            height: 22px;
-          }
-        }
-        #upload_assets_window, #create_assets_window{
-          border: 2px solid silver;
-          background-color: white;
-          padding: 3px;
-        }
-        #upload_assets_window{
-          form#new_asset input[type=submit]{
-            height: 25px;
-            display: inline;
-            margin: 1px;
-            box-shadow: none;
-          }
-          #uploaded_assets_list{
-            text-align: left;
-            padding: 2px;
-            .accepted{
-              color: #499249;
-            }
-            .delayed{
-              color: gray;
-              text-decoration: line-through;
-            }
-          }
-        }
-        #create_assets_window{
-
-        }
-      }
-      #new_asset_title{
-        cursor: pointer;
-        padding: 0.7em;
-        text-align: center;
-        color: #499249;
-        font-weight: bold;
-        background: -webkit-linear-gradient(top, silver 0%, rgba(102, 102, 102, 0.60) 100%);
-        background: -moz-linear-gradient(top, silver 0%, rgba(102, 102, 102, 0.60) 100%);
-        height: 28px;
-        border-left: 5px solid #499249;
-      }
-    }
   }
   #assets_ide{
     display: block;
@@ -317,6 +329,12 @@
       font-weight: bold;
       overflow: hidden;
       color: #777;
+    }
+    #editor_autoformat{
+      margin-left: 20%
+    }
+    & > *{
+      display: none;
     }
   }
 
