--- a/app/views/layouts/admin/_styles_&_scripts.erb
+++ b/app/views/layouts/admin/_styles_&_scripts.erb
@@ -2,7 +2,7 @@
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <script type="text/javascript" src="jquery.blend.js"></script>
 <![endif]-->
-<%= stylesheet_link_tag 'application.scss', :media => 'all' %>
+<%= stylesheet_link_tag 'main.scss', :media => 'all' %>
 <%= javascript_include_tag 'application', :media => 'all' %>
 
 <% if params[:controller] == "admin/assets" %>
